working on main landing

--- a/src/pages/mobile-app.astro
+++ b/src/pages/mobile-app.astro
@@ -2,6 +2,7 @@
 import Layout from '~/layouts/PageLayout.astro';
 
 import Header from '~/components/widgets/Header.astro';
+import { headerData } from '~/navigation';
 
 import Hero2 from '~/components/widgets/Hero2.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
@@ -29,16 +30,18 @@ const metadata = {
   <Fragment slot="announcement"></Fragment>
   <Fragment slot="header">
     <Header
+      {...headerData}
       position="left"
-      links={[
-        { text: 'Services', href: '#' },
-        { text: 'Features', href: '#' },
-        { text: 'About', href: '#' },
-      ]}
       actions={[
         {
-          text: 'Download',
-          href: '#download',
+          variant: 'secondary',
+          text: 'Login',
+          href: '#',
+        },
+        {
+          variant: 'primary',
+          text: 'Sign Up',
+          href: '#',
         },
       ]}
       isSticky
