--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -25,8 +25,8 @@ import '@fontsource-variable/inter';
     --aw-font-serif: 'Inter Variable';
     --aw-font-heading: 'Inter Variable';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-primary: rgb(0 197 153);
+    --aw-color-secondary: rgb(0 170 133);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(0 0 0);
@@ -34,10 +34,10 @@ import '@fontsource-variable/inter';
     --aw-color-text-muted: rgb(16 16 16 / 66%);
     --aw-color-bg-page: rgb(255 255 255);
 
-    --aw-color-bg-page-dark: rgb(3 6 32);
+    --aw-color-bg-page-dark: rgb(15 27 23);
 
     ::selection {
-      background-color: lavender;
+      background-color: rgb(0 197 153 / 20%);
     }
   }
 
@@ -46,18 +46,18 @@ import '@fontsource-variable/inter';
     --aw-font-serif: 'Inter Variable';
     --aw-font-heading: 'Inter Variable';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-primary: rgb(0 197 153);
+    --aw-color-secondary: rgb(0 170 133);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(247, 248, 248);
     --aw-color-text-default: rgb(229 236 246);
     --aw-color-text-muted: rgb(229 236 246 / 66%);
-    --aw-color-bg-page: rgb(3 6 32);
+    --aw-color-bg-page: rgb(15 27 23);
 
     ::selection {
-      background-color: black;
-      color: snow;
+      background-color: rgb(0 197 153 / 30%);
+      color: rgb(255 255 255);
     }
   }
 </style>
