added images and removed extra sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,7 +123,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-bg-secondary dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-bg-secondary"></div>
     </Fragment>
   </Content>
 
@@ -285,7 +285,7 @@ const metadata = {
     ]}
   >
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-bg-secondary dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-bg-secondary"></div>
     </Fragment>
   </Features2>
 
@@ -340,7 +340,7 @@ const metadata = {
     ]}
   >
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-bg-secondary dark:bg-transparent"></div>
+      <div class="absolute inset-0 bg-bg-secondary"></div>
     </Fragment>
   </FAQs>
 
