--- a/src/pages/mobile-app.astro
+++ b/src/pages/mobile-app.astro
@@ -86,6 +86,7 @@ const metadata = {
 
   <Content
     isReversed
+    title="Everything You Need to Care with Confidence"
     items={[
       {
         title: 'Note Taking',
