--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -35,6 +35,7 @@ import '@fontsource-variable/inter';
     --aw-color-bg-page: rgb(255 255 255);
 
     --aw-color-bg-page-dark: rgb(15 27 23);
+    --aw-color-bg-secondary: #eef1f0;
 
     ::selection {
       background-color: rgb(0 197 153 / 20%);
@@ -54,6 +55,7 @@ import '@fontsource-variable/inter';
     --aw-color-text-default: rgb(229 236 246);
     --aw-color-text-muted: rgb(229 236 246 / 66%);
     --aw-color-bg-page: rgb(15 27 23);
+    --aw-color-bg-secondary: rgb(40 60 55);
 
     ::selection {
       background-color: rgb(0 197 153 / 30%);
