added images and removed extra sections

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -53,9 +53,9 @@ import '@fontsource-variable/inter';
 
     --aw-color-text-heading: rgb(247, 248, 248);
     --aw-color-text-default: rgb(229 236 246);
-    --aw-color-text-muted: rgb(229 236 246 / 66%);
+    --aw-color-text-muted: rgba(229, 236, 246, 0.81);
     --aw-color-bg-page: rgb(15 27 23);
-    --aw-color-bg-secondary: rgb(40 60 55);
+    --aw-color-bg-secondary: rgba(32, 48, 47, 0.81);
 
     ::selection {
       background-color: rgb(0 197 153 / 30%);
