added images and removed extra sections

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -52,14 +52,30 @@ import '@fontsource-variable/inter';
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(247, 248, 248);
-    --aw-color-text-default: rgb(229 236 246);
-    --aw-color-text-muted: rgba(229, 236, 246, 0.81);
+    --aw-color-text-default: rgb(255, 255, 255);
+    --aw-color-text-muted: rgba(229, 236, 246, 0.925);
     --aw-color-bg-page: rgb(15 27 23);
     --aw-color-bg-secondary: rgba(32, 48, 47, 0.81);
 
     ::selection {
       background-color: rgb(0 197 153 / 30%);
       color: rgb(255 255 255);
+    }
+
+    .dark\:text-slate-400 {
+      color: rgb(236 240 243) !important;
+    }
+    .dark\:text-slate-300 {
+      color: rgb(248 250 252) !important;
+    }
+    .dark\:text-gray-400 {
+      color: rgb(236 240 243) !important;
+    }
+    .dark\:text-gray-200 {
+      color: rgb(248 250 252) !important;
+    }
+    .dark\:text-gray-300 {
+      color: rgb(248 250 252) !important;
     }
   }
 </style>
