added images and removed extra sections

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -54,14 +54,12 @@ import '@fontsource-variable/inter';
     --aw-color-text-heading: rgb(247, 248, 248);
     --aw-color-text-default: rgb(255, 255, 255);
     --aw-color-text-muted: rgba(229, 236, 246, 0.925);
-    --aw-color-bg-page: rgb(15 27 23);
-    --aw-color-bg-secondary: rgba(32, 48, 47, 0.81);
-
-    ::selection {
+    --aw-color-bg-page: rgb(8 13 13);
+    --aw-color-bg-secondary: rgb(28 40 40);
+    : selection {
       background-color: rgb(0 197 153 / 30%);
       color: rgb(255 255 255);
     }
-
     .dark\:text-slate-400 {
       color: rgb(236 240 243) !important;
     }
